k8s/apps/cocfr/clash-moderation/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cocfc-clash-moderation
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: cocfc-clash-moderation
  template:
    metadata:
      labels:
        component: cocfc-clash-moderation
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: app
          image: ghcr.io/gastbob40/cocfr-moderation:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
