k8s/apps/cocfr/clash-moderation/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cocfc-clash-moderation
spec:
  type: ClusterIP
  selector:
    component: cocfc-clash-moderation
  ports:
    - name: http
      port: 8080
      targetPort: http
